# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py  {{cookiecutter.project_slug}}.py
